discussion/kv_engine/173918/173918_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51805, MB-51806: Inherit HPS from previous Checkpoint

MB-51805:

Whilst the next patch in this chain fixes the issue on the neo
branch, a cherry-pick of this set of changes do not solve this
issue on the master branch.
https://review.couchbase.org/c/kv_engine/+/173044 removed the
Checkpoint re-use optimization on the master branch on which the
previous change (to load the PPS from disk into the CheckpointManager)
relies. On the master branch, when we receive our first SnapshotMarker
we create a new snapshot in the CheckpointManager which will actually
create a new Checkpoint. The HPS value that we have loaded from disk
and passed into the Checkpoint will no longer be correct.
Whilst we would normally just fix this on the master branch, we are
making the same change for MB-51806 anyway and I feel that it's
important to highlight the dual purpose of the change here.

MB-51806:

Currently we only update the highPreparedSeqno on disk if we are
persisting the item at the end of a snapshot. This is correct, but
fails to take into account that a Checkpoint only sets it's HPS
value when it sees a prepare. We could have a flush batch such that
we persist no item at a snapshot end for Checkpoints containing
prepares and the HPS is not moved when it should be. E.g.

[1:Pre(key1), 2:Mutation(key2)][3:Mutation(key2)]
             ^
         HPS = 1

When visited by the flusher the HPS of 1 is not persisted. This allows
for a scenario where a replica node restarts and the HPS goes backwards
as this node would still ack 1 back to the Producer. If the cluster
has two replicas and the other replica is behind, it's possible for it
to be picked for promotion over this node. See MB for full scenario.

This change fixes this issue as the second Checkpoint inherits the
highPreparedSeqno value from the previous one, and rather than finding
no value to flush, it finds the correct value of 1.

Change-Id: I06f43c18975049187705efcb967f2d9c1fa5c782

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-11 11:40:40.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-11 11:40:52.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/298320/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-11 12:41:36.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/241/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [139/159]: test eviction with xattr...(18 ms) SKIPPED


99% tests passed, 3 tests failed out of 423

Total Test time (real) = 738.83 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/241/ )

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.ExpiredItemsDeleted/persistent_nexus_couchstore_magma_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.ExpiredItemsDeleted/persistent_nexus_couchstore_magma_full_eviction
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1704): error: Expected equality of these values:
  cb::engine_errc::would_block
    Which is: would block
  getKeyFn(key_2)
    Which is: no memory
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1707): error: Expected equality of these values:
  cb::engine_errc::no_such_key
    Which is: no such key
  getKeyFn(key_2)
    Which is: no memory
Key with TTL:20 should be removed.
[  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.ExpiredItemsDeleted/persistent_nexus_couchstore_magma_full_eviction, where GetParam() = "bucket_type=persistent:backend=nexus:nexus_primary_backend=couchstore:nexus_secondary_backend=magma:item_eviction_policy=full_eviction" (150 ms)
EphemeralOrPersistent/STExpiryPagerTest.ExpiredItemsDeleted/persistent_nexus_couchstore_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/241/ )

Timeout of a CTest test 422/423 Test #273: ep_testsuite.value_eviction.comp_active .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/241/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/235/ : FAILURE

Timeout of a CTest test [2022-05-11T12:41:27.910Z] 443/443 Test #441: cluster_test ................................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/235/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/181/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/178/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/184/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/180/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/190/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/185/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/188/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/173/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-11 13:00:59.000000000
Message: 
Patch Set 5: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/181/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/178/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/184/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/180/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/190/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/185/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/188/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/239/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/173/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/246/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-12 12:43:11.000000000
Message: 
Patch Set 5: Code-Review+2

(2 comments)
Line:5004, engines/ep/tests/module_tests/evp_store_durability_test.cc -> Is this stand at 0 before the fix right?

Line:5007, engines/ep/tests/module_tests/evp_store_durability_test.cc -> same

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-12 12:43:43.000000000
Message: 
Patch Set 5:

(1 comment)
Line:5004, engines/ep/tests/module_tests/evp_store_durability_test.cc -> *staying

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-12 13:43:32.000000000
Message: 
Patch Set 5:

(3 comments)
Line:5000, engines/ep/tests/module_tests/evp_store_durability_test.cc -> also this one

Line:5004, engines/ep/tests/module_tests/evp_store_durability_test.cc -> Yes

Line:5007, engines/ep/tests/module_tests/evp_store_durability_test.cc -> Yes

----------------------------------------------------------------------------------------------------------------------
